--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>My Projects</h1>
     <hr>
-     <a href="/3.4 Birthday Invite Project/index.html"><h2>Birthday Invite Project</h2>
+     <a href="./public/birthday-invite.html"><h2>Birthday Invite Project</h2>
      </a>
      <img src="./assets/images/birthday-invite.png" alt="cake picture" width="300" height="400">
      <hr>
-     <a href="../2.4 Movie Ranking/index.html"><h2>Movie Ranking Project</h2></a>
+     <a href="./public/movie-ranking.html"><h2>Movie Ranking Project</h2></a>
      <img src="./assets/images/movie-ranking.png" alt="description" width="300" height="400">
      <hr>
      <a href="./public/about.html">About me</a>
